--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta http-equiv="Cross-Origin-Embedder-Policy" content="credentialless">
     <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">
+    <meta http-equiv="Cross-Origin-Resource-Policy" content="cross-origin">
+    
     <title>InsightsLM</title>
     <meta name="description" content="Your AI-powered knowledge companion" />
     <meta name="author" content="Lovable" />
